--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Test
+name: Build
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-
+    name: Test
     runs-on: ubuntu-latest
 
     strategy:
