--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "npm": "^6.14.12"
   },
   "devDependencies": {
+    "@godaddy/tartufo-node": "^0.1.0",
     "chai": "^4.1.2",
     "co": "^4.6.0",
     "eslint": "^6.6.0",
@@ -46,6 +47,7 @@
   "scripts": {
     "start": "./bin/hubot",
     "test": "mocha",
-    "posttest": "eslint ."
+    "posttest": "eslint .",
+    "tartufo": "tartufo scan-local-repo ."
   }
 }
